# typeyao

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
typeyao/: __init__.py  fields.py  model.py
typeyao/base/: _meta.py  _typing.py  exceptions.py
